# bootstrap

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  pyproject.toml  ruff.toml  setup.sh
apptainer/: .gitignore  README.md  gpaw-cpu.def
workflows/gpaw/: README.md  plan.py
workflows/matplotlib/: .gitignore  README.md  generate.py  plan.py  plot.py
workflows/slurm/: README.md  plan.py
workflows/slurm/static/: slurmjob.sh
