# SPDX-FileCopyrightText: © 2026 Toon Verstraelen <Toon.Verstraelen@UGent.be>
# SPDX-License-Identifier: CC0-1.0

[project]
# These are mainly placeholders. Feel free to change them as you see fit.
name = "bootstrap"
version = "0.1.0"
description = "Boostrap your StepUp project."
readme = "README.md"
dependencies = [
    "matplotlib>=3.10.8",
    "pre-commit>=4.5.1",
    "reuse>=6.2.0",
    "stepup>=3.2.3",
    "stepup-queue>=1.1.1",
    "stepup-reprep>=3.1.9",
]
requires-python = ">=3.12"

[tool.uv]
package = false
cache-dir = "./.venv/cache"
python-downloads = "auto"
